--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "eslint": "^8.57.0",
-    "lint": "^0.8.19",
-    "vue": "^3.4.21"
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "sass": "^1.74.1",
     "vite": "^5.2.0"
   }
 }
